# dggt

./: .gitignore  CMakeLists.txt  Doxyfile  build.sh  dggt  gitsync.sh
docs/html/: annotated.html  classes.html  dggt_8h_source.html  dggt__allocator_8h_source.html  dggt__defs_8h_source.html  dggt__math_8h_source.html  dggt__mem_8h_source.html  dggt__mem__utils_8h.html  dggt__mem__utils_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  index.html  structdggt_1_1mem_1_1allocator-members.html  structdggt_1_1mem_1_1allocator.html  structdggt_1_1mem_1_1free__block-members.html  structdggt_1_1mem_1_1free__block.html  structdggt_1_1mem_1_1pool__block-members.html  structdggt_1_1mem_1_1pool__block.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  searchdata.js
docs/latex/: annotated.tex  dggt__mem__utils_8h.tex  files.tex  refman.tex  structdggt_1_1mem_1_1allocator.tex  structdggt_1_1mem_1_1free__block.tex  structdggt_1_1mem_1_1pool__block.tex
src/: dggt.cxx  dggt.h  dggt_allocator.cxx  dggt_allocator.h  dggt_coll.h  dggt_darray.h  dggt_darray.inl  dggt_defs.h  dggt_math.cxx  dggt_math.h  dggt_mem.h  dggt_mem_utils.cxx  dggt_mem_utils.h  dggt_sllist.h  dggt_sllist.inl  dggt_stallocator.h  dggt_stallocator.inl  dggt_starray.h  dggt_starray.inl  dggt_test.cxx
